--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
@@ -37,6 +38,8 @@
   "devDependencies": {
     "@testing-library/dom": "^8.20.0",
     "@trybe/eslint-config-frontend": "^1.11.3",
+    "@types/cypress": "^1.1.3",
+    "@types/jquery": "^3.5.29",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-swc": "^3.1.0",
     "jsdom": "^21.1.0",
